--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,7 @@ jobs:
         uses: actions/checkout@v3
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-          with:
-            node-version: 18
+          with:node-version:18
       - run: npm ci
       - run: npm test
       - name: Install yarn
