--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,8 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v3
       - uses: actions/setup-node@v3
-          with:node-version:18
+          with: 
+            node-version: 18
       - run: npm ci
       - run: npm test
       - name: Install yarn
