--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,19 +18,6 @@ jobs:
         run: yarn install
       - name: Preform linting
         run: yarn lint
-      - name: Log in DockerHub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-      - name: Build Docker image
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: "true" 
-          tags: 
-            ${{ secrets.DOCKERHUB_USERNAME }}/webapp:latest
 
   test:
     needs: build
@@ -47,3 +34,20 @@ jobs:
       - name: Run tests
         run: yarn test
 
+  docker:
+    needs: [build, test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Log in DockerHub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Build Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Dockerfile
+          push: "true" 
+          tags: 
+            ${{ secrets.DOCKERHUB_USERNAME }}/webapp:latest
