--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,26 +18,8 @@ jobs:
         run: yarn install
       - name: Preform linting
         run: yarn lint
-
-  test:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - name: Install nodeJS
-        uses: actions/setup-node@v3
-        with:
-            node-version: 18
-      - name: Install yarn
-        run: yarn install
-      - name: Run tests
+      - name: Testing yarn
         run: yarn test
-
-  docker:
-    needs: [build, test]
-    runs-on: ubuntu-latest
-    steps:
       - name: Log in DockerHub
         uses: docker/login-action@v3
         with:
