--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,10 @@ jobs:
         run: yarn install
       - name: Preform linting
         run: yarn lint
+      - name: starting yarn
+        run: yarn
+      - name: Testing yarn
+        run: yarn test
       - name: Log in DockerHub
         uses: docker/login-action@v3
         with:
@@ -31,5 +35,4 @@ jobs:
           push: "true" 
           tags: 
             ${{ secrets.DOCKERHUB_USERNAME }}/webapp:latest
-      - name: Testing yarn
-        run: yarn test
+      
