--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Preform linting
         run: yarn lint
       - name: starting yarn
-        run: yarn build
+        run: yarn start
       - name: Testing yarn
         run: yarn test
       - name: Log in DockerHub
