test extra server

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,6 +22,8 @@ jobs:
         run: yarn start:pm2
       - name: Testing yarn
         run: yarn test
+      - name: Stop server
+        run: yarn stop:pm2
       - name: Log in DockerHub
         uses: docker/login-action@v3
         with:
@@ -35,6 +37,4 @@ jobs:
           push: "true" 
           tags: 
             ${{ secrets.DOCKERHUB_USERNAME }}/webapp:latest
-      - name: Stop server
-        run: pm2 kill
       
